--- a/style.css
+++ b/style.css
@@ -29,9 +29,8 @@ body {
 	position: relative;
 }
 
-/* Общий цвет для всех заголовков как у h1 */
 h1, h2, h3, h4, h5, h6 {
-	color: #0098ff;
+	color: #8ae7f8;
 	text-align: center;
 	margin: 15px 0;
 	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
@@ -39,11 +38,11 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Постепенное увеличение прозрачности */
 h1 { opacity: 1; font-size: 3.0rem; }
-h2 { opacity: 0.95; font-size: 2.5rem; }
-h3 { opacity: 0.9; font-size: 2.0rem; }
-h4 { opacity: 0.85; font-size: 1.7rem; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); }
-h5 { opacity: 0.8; font-size: 1.4rem; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); }
-h6 { opacity: 0.75; font-size: 1.2rem; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); }
+h2 { opacity: 0.9; font-size: 2.5rem; }
+h3 { opacity: 0.8; font-size: 2.0rem; }
+h4 { opacity: 0.7; font-size: 1.7rem; text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); }
+h5 { opacity: 0.6; font-size: 1.4rem; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); }
+h6 { opacity: 0.5; font-size: 1.2rem; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2); }
 
 .theme-toggle {
 	position: absolute;
@@ -77,4 +76,5 @@ body.dark-theme .container {
 	background: rgba(0, 0, 0, 0.2);
 	border-color: rgba(255, 255, 255, 0.1);
 }
+
 
